--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/grad1.png);
+    background-image: url(Images/grad1.png);
     background-size: cover;
     background-position: center;
 }
