--- a/style.css
+++ b/style.css
@@ -146,7 +146,11 @@ nav ul li a:hover::after{
     grid-gap: 40px;
     margin-top: 50px;
 }
+.hidden {
+    display: none;
+}
 .work{
+    min-height: 300px;
     border-radius: 10px;
     position: relative;
     overflow: hidden;
